# derivatives-lab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  conventions.md
examples/: build_surface.py
examples/data/: spy_chain_2026-07-09.json
src/derivlab/: __init__.py  _validate.py  binomial.py  bs.py  implied_vol.py  monte_carlo.py  surface.py  viz.py
tests/: test_derivlab.py  test_spy_integration.py  test_validate.py  test_viz.py
